syntax = "proto3";

package Wwbweibo.CrackDetect.Models;

message TaskModel{
	// 任务ID
	string majorTaskId=1;
	// 任务开始时间
	string taksStartTime=2;
	// 子任务ID
	string subTaskId=3;
	// 子任务数据
	string subTaskData=4;
	// 子任务时间
	string subTaskTime=5;
	// 经度
	string longitude=6;
	// 纬度
	string latitude=7;
	// 最终结果图片
	string resultData=8;
	// 最终结果ID
	string resultId=9;
}